--- a/notebooks/Batch_process.ipynb
+++ b/notebooks/Batch_process.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5529672e-06a6-4630-abb7-82d590d9d61f",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "71ff4db5-2d77-470d-93a3-f3487ba23dd3",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "ad1fc597-17da-4aee-bf9e-2156a4e60052",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,14 +508,14 @@
     "# Dataframe with metadata\n",
     "info_RBDS = pd.read_csv(os.path.join(dir_data,'RBDSinfo.txt'), delimiter='\\t')\n",
     "info_RBDS.drop_duplicates(subset='Subject', inplace=True)\n",
-    "info_RBDS = info_RBDS.drop()\n",
+    "info_RBDS = info_RBDS[info_RBDS['Gender']!='F'] # Exclude female subject\n",
     "info_RBDS.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b7e19b12-e5d6-4a1e-8e78-56c8fb66e3df",
+   "execution_count": 30,
+   "id": "605b884e-7630-4c88-8f15-5634c02b54b6",
    "metadata": {},
    "outputs": [
     {
@@ -547,60 +547,465 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>27.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>34.8</td>\n",
-       "      <td>176.0</td>\n",
-       "      <td>69.6</td>\n",
+       "      <td>34.592593</td>\n",
+       "      <td>176.325926</td>\n",
+       "      <td>70.111111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>7.7</td>\n",
+       "      <td>6.761084</td>\n",
+       "      <td>6.646549</td>\n",
+       "      <td>7.464175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>22.0</td>\n",
-       "      <td>162.7</td>\n",
-       "      <td>56.8</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>162.700000</td>\n",
+       "      <td>57.050000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>51.0</td>\n",
-       "      <td>187.2</td>\n",
-       "      <td>82.2</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>187.200000</td>\n",
+       "      <td>82.150000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Age  Height  Mass\n",
-       "count  28.0    28.0  28.0\n",
-       "mean   34.8   176.0  69.6\n",
-       "std     6.7     6.8   7.7\n",
-       "min    22.0   162.7  56.8\n",
-       "max    51.0   187.2  82.2"
+       "             Age      Height       Mass\n",
+       "count  27.000000   27.000000  27.000000\n",
+       "mean   34.592593  176.325926  70.111111\n",
+       "std     6.761084    6.646549   7.464175\n",
+       "min    22.000000  162.700000  57.050000\n",
+       "max    51.000000  187.200000  82.150000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info_RBDS[['Age','Height','Mass']].agg(['count', 'mean', 'std', 'min', 'max']).apply(lambda x: round(x, 1))"
+    "desc = info_RBDS[['Age','Height','Mass']].agg(['count', 'mean', 'std', 'min', 'max'])\n",
+    "desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b7e19b12-e5d6-4a1e-8e78-56c8fb66e3df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.761083545723326"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desc['Age']['std']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c8bc652-0096-47b3-b458-2ebc64abfbb9",
+   "metadata": {},
+   "source": [
+    "## Filter RIC data to find the best match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b65fcbec-2732-47b0-b50a-5db687884064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(905, 26)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove female subjects\n",
+    "info_RIC = info_RIC[info_RIC['Gender']=='Male']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "19d1909e-293a-486c-9eca-32bfbaaa8bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = 0.025 # 2.5%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "90182c8a-accc-4e34-8ec1-331cccd47c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower limit age criterion is 27.831509046869268 years\n",
+      "Upper limit age criterion is 41.35367613831592 years\n"
+     ]
+    }
+   ],
+   "source": [
+    "uL_age = desc['Age']['mean']+desc['Age']['std']\n",
+    "lL_age = desc['Age']['mean']-desc['Age']['std']\n",
+    "print('Lower limit age criterion is '+str(lL_age)+' years')\n",
+    "print('Upper limit age criterion is '+str(uL_age)+' years')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5ca4aca1-34d7-4f74-9399-da8b45b35a89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower limit Height criterion is 169.6793772210258 cm\n",
+      "Upper limit Height criterion is 182.97247463082607 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "uL_ht = desc['Height']['mean']+desc['Height']['std']\n",
+    "lL_ht = desc['Height']['mean']-desc['Height']['std']\n",
+    "print('Lower limit Height criterion is '+str(lL_ht)+' cm')\n",
+    "print('Upper limit Height criterion is '+str(uL_ht)+' cm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2f3f1929-dc82-4b87-95cc-e9ac7839270f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower limit Mass criterion is 62.6469359888079 kg\n",
+      "Upper limit Mass criterion is 77.57528623341433 kg\n"
+     ]
+    }
+   ],
+   "source": [
+    "uL_wt = desc['Mass']['mean']+desc['Mass']['std']\n",
+    "lL_wt = desc['Mass']['mean']-desc['Mass']['std']\n",
+    "print('Lower limit Mass criterion is '+str(lL_wt)+' kg')\n",
+    "print('Upper limit Mass criterion is '+str(uL_wt)+' kg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f05ba7e6-af2a-4d7b-8859-7013129034dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower limit run speed criterion is 3.4125 m/s\n",
+      "Upper limit run speed criterion is 3.5875 m/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "uL_speed = 3.5 + 0.025*3.5\n",
+    "lL_speed = 3.5 - 0.025*3.5\n",
+    "print('Lower limit run speed criterion is '+str(lL_speed)+' m/s')\n",
+    "print('Upper limit run speed criterion is '+str(uL_speed)+' m/s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "04947425-d044-4c5a-959e-69547eed2011",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_id</th>\n",
+       "      <th>datestring</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>speed_r</th>\n",
+       "      <th>age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>DominantLeg</th>\n",
+       "      <th>InjDefn</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SpecInjury2</th>\n",
+       "      <th>Activities</th>\n",
+       "      <th>Level</th>\n",
+       "      <th>YrsRunning</th>\n",
+       "      <th>RaceDistance</th>\n",
+       "      <th>RaceTimeHrs</th>\n",
+       "      <th>RaceTimeMins</th>\n",
+       "      <th>RaceTimeSecs</th>\n",
+       "      <th>YrPR</th>\n",
+       "      <th>NumRaces</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>101679</td>\n",
+       "      <td>2016-02-26 12:06:37</td>\n",
+       "      <td>20160226T120637.json</td>\n",
+       "      <td>3.427947</td>\n",
+       "      <td>39</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>2 workouts missed in a row</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Triathalon, Basketball, Hockey</td>\n",
+       "      <td>Competitive</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Full Marathon</td>\n",
+       "      <td>2</td>\n",
+       "      <td>59</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1502</th>\n",
+       "      <td>200267</td>\n",
+       "      <td>2014-10-03 07:29:30</td>\n",
+       "      <td>20141003T072930.json</td>\n",
+       "      <td>3.433167</td>\n",
+       "      <td>35</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>Training volume/intensity affected</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Marathon Runner</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Full Marathon</td>\n",
+       "      <td>3</td>\n",
+       "      <td>47</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1504</th>\n",
+       "      <td>200267</td>\n",
+       "      <td>2014-10-03 07:39:38</td>\n",
+       "      <td>20141003T073938.json</td>\n",
+       "      <td>3.488693</td>\n",
+       "      <td>35</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>Training volume/intensity affected</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Marathon Runner</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Full Marathon</td>\n",
+       "      <td>3</td>\n",
+       "      <td>47</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1506</th>\n",
+       "      <td>200267</td>\n",
+       "      <td>2014-10-14 07:21:57</td>\n",
+       "      <td>20141014T072157.json</td>\n",
+       "      <td>3.446787</td>\n",
+       "      <td>35</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>No injury</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Distance Running</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Full Marathon</td>\n",
+       "      <td>03</td>\n",
+       "      <td>47</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1508</th>\n",
+       "      <td>200267</td>\n",
+       "      <td>2014-10-14 07:36:09</td>\n",
+       "      <td>20141014T073609.json</td>\n",
+       "      <td>3.416386</td>\n",
+       "      <td>35</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>No injury</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Distance Running</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Full Marathon</td>\n",
+       "      <td>03</td>\n",
+       "      <td>47</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1552</th>\n",
+       "      <td>200287</td>\n",
+       "      <td>2014-06-23 14:29:44</td>\n",
+       "      <td>20140623T142944.json</td>\n",
+       "      <td>3.465040</td>\n",
+       "      <td>29</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>2 workouts missed in a row</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Distance Running</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Other distance</td>\n",
+       "      <td>HH</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sub_id           datestring              filename   speed_r  age  \\\n",
+       "201   101679  2016-02-26 12:06:37  20160226T120637.json  3.427947   39   \n",
+       "1502  200267  2014-10-03 07:29:30  20141003T072930.json  3.433167   35   \n",
+       "1504  200267  2014-10-03 07:39:38  20141003T073938.json  3.488693   35   \n",
+       "1506  200267  2014-10-14 07:21:57  20141014T072157.json  3.446787   35   \n",
+       "1508  200267  2014-10-14 07:36:09  20141014T073609.json  3.416386   35   \n",
+       "1552  200287  2014-06-23 14:29:44  20140623T142944.json  3.465040   29   \n",
+       "\n",
+       "      Height  Weight Gender DominantLeg                             InjDefn  \\\n",
+       "201    177.0    79.0   Male       Right          2 workouts missed in a row   \n",
+       "1502   194.0    88.0   Male       Right  Training volume/intensity affected   \n",
+       "1504   194.0    88.0   Male       Right  Training volume/intensity affected   \n",
+       "1506   194.0    88.0   Male       Right                           No injury   \n",
+       "1508   194.0    88.0   Male       Right                           No injury   \n",
+       "1552   189.0    80.0   Male       Right          2 workouts missed in a row   \n",
+       "\n",
+       "      ... SpecInjury2                      Activities         Level  \\\n",
+       "201   ...         NaN  Triathalon, Basketball, Hockey   Competitive   \n",
+       "1502  ...         NaN                 Marathon Runner  Recreational   \n",
+       "1504  ...         NaN                 Marathon Runner  Recreational   \n",
+       "1506  ...         NaN                Distance Running  Recreational   \n",
+       "1508  ...         NaN                Distance Running  Recreational   \n",
+       "1552  ...         NaN                Distance Running  Recreational   \n",
+       "\n",
+       "      YrsRunning    RaceDistance RaceTimeHrs RaceTimeMins RaceTimeSecs  \\\n",
+       "201          6.0   Full Marathon           2           59           51   \n",
+       "1502         2.0   Full Marathon           3           47           00   \n",
+       "1504         2.0   Full Marathon           3           47           00   \n",
+       "1506         2.0   Full Marathon          03           47           00   \n",
+       "1508         2.0   Full Marathon          03           47           00   \n",
+       "1552         2.0  Other distance          HH           MM           SS   \n",
+       "\n",
+       "        YrPR  NumRaces  \n",
+       "201   2013.0      10.0  \n",
+       "1502  2012.0       2.0  \n",
+       "1504  2012.0       2.0  \n",
+       "1506  2012.0       2.0  \n",
+       "1508  2012.0       2.0  \n",
+       "1552     NaN       NaN  \n",
+       "\n",
+       "[6 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "speed_filt = info_RIC[(info_RIC['speed_r']<uL_speed) & (info_RIC['speed_r']>lL_speed)]\n",
+    "demo_filt = speed_filt[(speed_filt['age']>lL_age) & (speed_filt['age']<uL_age)]\n",
+    "demo_filt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3ba65ff-dfee-4eab-b9ec-113a94e5293b",
+   "id": "1231df72-ea23-4c24-a0e4-138ccb1430c4",
    "metadata": {},
    "outputs": [],
    "source": []
